--- a/javaclient/javaclient.vcproj
+++ b/javaclient/javaclient.vcproj
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="8.00"
+	Version="9.00"
 	Name="javaclient"
 	ProjectGUID="{726FB005-0E19-4DDA-BEA3-1FCACB7AF9E2}"
 	Keyword="MakeFileProj"
+	TargetFrameworkVersion="131072"
 	>
 	<Platforms>
 		<Platform
