--- a/javascope/javascope.vcproj
+++ b/javascope/javascope.vcproj
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="8.00"
+	Version="9.00"
 	Name="javascope"
 	ProjectGUID="{AC9DEDE9-579F-414E-9BA9-39D519B58F76}"
 	Keyword="MakeFileProj"
+	TargetFrameworkVersion="131072"
 	>
 	<Platforms>
 		<Platform
