--- a/matlab/matlab.vcproj
+++ b/matlab/matlab.vcproj
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="8.00"
+	Version="9.00"
 	Name="matlab"
 	ProjectGUID="{D677645B-0E98-4F7F-AEA1-5B703CDF0718}"
+	RootNamespace="matlab"
+	TargetFrameworkVersion="131072"
 	>
 	<Platforms>
 		<Platform
@@ -47,7 +49,7 @@
 				Name="VCCLCompilerTool"
 				InlineFunctionExpansion="1"
 				AdditionalIncludeDirectories="$(MATLAB_DIR)\extern\include,..\include"
-				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;MATLAB_EXPORTS"
+				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;MATLAB_EXPORTS;_CRT_SECURE_NO_WARNINGS"
 				StringPooling="true"
 				RuntimeLibrary="0"
 				EnableFunctionLevelLinking="true"
@@ -80,6 +82,8 @@
 				SuppressStartupBanner="true"
 				ModuleDefinitionFile=".\mdsipmex.def"
 				ProgramDatabaseFile=".\Release/mdsipmex.pdb"
+				RandomizedBaseAddress="1"
+				DataExecutionPrevention="0"
 				ImportLibrary="$(OutDir)/mdsipmex.lib"
 			/>
 			<Tool
@@ -99,9 +103,6 @@
 			/>
 			<Tool
 				Name="VCAppVerifierTool"
-			/>
-			<Tool
-				Name="VCWebDeploymentTool"
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
@@ -175,6 +176,8 @@
 				ModuleDefinitionFile=".\mdsipmex.def"
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="$(IntDir)/mdsipmex.pdb"
+				RandomizedBaseAddress="1"
+				DataExecutionPrevention="0"
 				ImportLibrary="$(OutDir)/mdsipmex.lib"
 			/>
 			<Tool
@@ -194,9 +197,6 @@
 			/>
 			<Tool
 				Name="VCAppVerifierTool"
-			/>
-			<Tool
-				Name="VCWebDeploymentTool"
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
