--- a/mdstcpip/mdsipshr.vcproj
+++ b/mdstcpip/mdsipshr.vcproj
@@ -203,6 +203,14 @@
 	<References>
 	</References>
 	<Files>
+		<Filter
+			Name="Includes"
+			>
+			<File
+				RelativePath=".\mdsip.h"
+				>
+			</File>
+		</Filter>
 		<File
 			RelativePath=".\adler32.c"
 			>
