--- a/cdu/cdushr.vcproj
+++ b/cdu/cdushr.vcproj
@@ -4,6 +4,7 @@
 	Version="9.00"
 	Name="cdushr"
 	ProjectGUID="{99297CBC-AE50-4919-8C21-68BB221574A7}"
+	RootNamespace="cdushr"
 	TargetFrameworkVersion="131072"
 	>
 	<Platforms>
@@ -47,7 +48,7 @@
 				Name="VCCLCompilerTool"
 				InlineFunctionExpansion="1"
 				AdditionalIncludeDirectories="../include"
-				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS"
+				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_CRT_SECURE_NO_WARNINGS"
 				StringPooling="true"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
