--- a/javadispatcher/javadispatcher.vcproj
+++ b/javadispatcher/javadispatcher.vcproj
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="8.00"
+	Version="9.00"
 	Name="javadispatcher"
 	ProjectGUID="{9E84A1A9-DED1-4AD8-A654-A60249DFEEAE}"
 	Keyword="MakeFileProj"
+	TargetFrameworkVersion="131072"
 	>
 	<Platforms>
 		<Platform
