--- a/javamds/javamds.vcproj
+++ b/javamds/javamds.vcproj
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="8.00"
+	Version="9.00"
 	Name="javamds"
 	ProjectGUID="{4CC77AA4-5CB1-43A6-AF31-99569E542CB6}"
 	RootNamespace="javamds"
+	TargetFrameworkVersion="131072"
 	>
 	<Platforms>
 		<Platform
@@ -81,6 +82,8 @@
 				SuppressStartupBanner="true"
 				ModuleDefinitionFile=".\javamds.def"
 				ProgramDatabaseFile=".\Release/javamds.pdb"
+				RandomizedBaseAddress="1"
+				DataExecutionPrevention="0"
 				ImportLibrary="$(OutDir)/javamds.lib"
 			/>
 			<Tool
@@ -100,9 +103,6 @@
 			/>
 			<Tool
 				Name="VCAppVerifierTool"
-			/>
-			<Tool
-				Name="VCWebDeploymentTool"
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
@@ -169,13 +169,15 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalOptions="/MACHINE:I386"
-				AdditionalDependencies="odbc32.lib odbccp32.lib $(JDK_DIR)\lib\jvm.lib"
+				AdditionalDependencies="odbc32.lib odbccp32.lib &quot;$(JDK_DIR)\lib\jvm.lib&quot;"
 				OutputFile="$(OutDir)/javamds.dll"
 				LinkIncremental="2"
 				SuppressStartupBanner="true"
 				ModuleDefinitionFile=".\javamds.def"
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="$(IntDir)/javamds.pdb"
+				RandomizedBaseAddress="1"
+				DataExecutionPrevention="0"
 				ImportLibrary="$(OutDir)/javamds.lib"
 			/>
 			<Tool
@@ -195,9 +197,6 @@
 			/>
 			<Tool
 				Name="VCAppVerifierTool"
-			/>
-			<Tool
-				Name="VCWebDeploymentTool"
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
