--- a/javascope/WaveDisplay.vcproj
+++ b/javascope/WaveDisplay.vcproj
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="8.00"
+	Version="9.00"
 	Name="WaveDisplay"
 	ProjectGUID="{18515822-B059-46F4-BA47-2A2DE97F07EE}"
 	Keyword="MakeFileProj"
+	TargetFrameworkVersion="131072"
 	>
 	<Platforms>
 		<Platform
