--- a/mdsobjects/java/java.vcproj
+++ b/mdsobjects/java/java.vcproj
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="8.00"
+	Version="9.00"
 	Name="javaobjects"
 	ProjectGUID="{02A1CB34-AA0D-49D9-B470-031FB1E74902}"
 	RootNamespace="javaobjects"
 	Keyword="MakeFileProj"
+	TargetFrameworkVersion="131072"
 	>
 	<Platforms>
 		<Platform
