--- a/mdstcpip/mdsip_service.vcproj
+++ b/mdstcpip/mdsip_service.vcproj
@@ -45,7 +45,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="0"
 				AdditionalIncludeDirectories="../include,&apos;../../PROGRAM_FILES/PLATFORM SDK/INCLUDE&apos;"
-				PreprocessorDefinitions="_DEBUG,WIN32,_CONSOLE,_NT_SERVICE"
+				PreprocessorDefinitions="_DEBUG,WIN32,_CONSOLE,_NT_SERVICE;_CRT_SECURE_NO_WARNINGS"
 				RuntimeLibrary="3"
 				UsePrecompiledHeader="0"
 				PrecompiledHeaderFile=".\mdsip_service\Debug/mdsip_service.pch"
@@ -75,6 +75,7 @@
 				OutputFile="$(OutDir)/mdsip_service.exe"
 				LinkIncremental="2"
 				SuppressStartupBanner="true"
+				UACExecutionLevel="2"
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="$(IntDir)/mdsip_service.pdb"
 				SubSystem="1"
@@ -134,7 +135,7 @@
 				Name="VCCLCompilerTool"
 				InlineFunctionExpansion="1"
 				AdditionalIncludeDirectories="../include,&apos;../../PROGRAM_FILES/PLATFORM SDK/INCLUDE&apos;"
-				PreprocessorDefinitions="NDEBUG,WIN32,_CONSOLE,_NT_SERVICE"
+				PreprocessorDefinitions="NDEBUG,WIN32,_CONSOLE,_NT_SERVICE;_CRT_SECURE_NO_WARNINGS"
 				StringPooling="true"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
@@ -166,6 +167,7 @@
 				OutputFile="$(OutDir)/mdsip_service.exe"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
+				UACExecutionLevel="2"
 				ProgramDatabaseFile=".\mdsip_service\Release/mdsip_service.pdb"
 				SubSystem="1"
 				RandomizedBaseAddress="1"
