--- a/javamds/javamds.vcproj
+++ b/javamds/javamds.vcproj
@@ -169,7 +169,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalOptions="/MACHINE:I386"
-				AdditionalDependencies="odbc32.lib odbccp32.lib &quot;$(JDK_DIR)\lib\jvm.lib&quot;"
+				AdditionalDependencies="odbc32.lib odbccp32.lib &quot;$(JDK_DIR)\lib\jvm.lib&quot; &quot;L:\Taliercio\mdsplus\cacheshr\Debug\cacheshr.lib&quot;"
 				OutputFile="$(OutDir)/javamds.dll"
 				LinkIncremental="2"
 				SuppressStartupBanner="true"
@@ -224,6 +224,14 @@
 			</File>
 			<File
 				RelativePath=".\JavaTrav.c"
+				>
+			</File>
+			<File
+				RelativePath=".\mdsobjects.c"
+				>
+			</File>
+			<File
+				RelativePath=".\ServerSupport.c"
 				>
 			</File>
 		</Filter>
