--- a/javatraverser/Makefile.in
+++ b/javatraverser/Makefile.in
@@ -99,7 +99,8 @@ DPO7054Setup.java \
 L9109Setup.java \
 LASER_NDRTSetup.java \
 IPControlSetup.java \
-EQU_GAINSetup.java
+EQU_GAINSetup.java \
+EM_EQU_TEST_NEWSetup.java
 
 
 
