--- a/javamds/javamds.vcproj
+++ b/javamds/javamds.vcproj
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="9.00"
+	Version="9,00"
 	Name="javamds"
 	ProjectGUID="{4CC77AA4-5CB1-43A6-AF31-99569E542CB6}"
 	RootNamespace="javamds"
@@ -169,7 +169,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalOptions="/MACHINE:I386"
-				AdditionalDependencies="odbc32.lib odbccp32.lib &quot;$(JDK_DIR)\lib\jvm.lib&quot; &quot;L:\Taliercio\mdsplus\cacheshr\Debug\cacheshr.lib&quot;"
+				AdditionalDependencies="odbc32.lib odbccp32.lib &quot;$(JDK_DIR)\lib\jvm.lib&quot; &quot;..\Debug\cacheshr.lib&quot;"
 				OutputFile="$(OutDir)/javamds.dll"
 				LinkIncremental="2"
 				SuppressStartupBanner="true"
